ymls/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: serviceimc
  namespace: adriel
spec:
  selector:
    app: deployimc
  ports:
  - port: 5000
    targetPort: 3000
